--- a/nodeJSTemporadas/package.json
+++ b/nodeJSTemporadas/package.json
@@ -10,6 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "after": "^0.8.2",
+    "async": "^3.2.0",
     "once": "^1.4.0"
   }
 }
