--- a/nodeJSTemporadas/package.json
+++ b/nodeJSTemporadas/package.json
@@ -10,8 +10,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "JSONStream": "^1.3.5",
     "after": "^0.8.2",
     "async": "^3.2.0",
-    "once": "^1.4.0"
+    "csv-write-stream": "^2.0.0",
+    "once": "^1.4.0",
+    "request": "^2.88.2",
+    "through2": "^4.0.2"
   }
 }
